<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#e4eef5"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/quiz_app_banner1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="55dp"
                android:fontFamily="sans-serif-medium"
                android:gravity="center_horizontal"
                android:text="@string/app_n"
                android:textAllCaps="true"
                android:textColor="#ffffff"
                android:textSize="36sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/name_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/your_name"
                android:inputType="textCapWords" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/instruction"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout style="@style/questionBox">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/q1"
                    android:textSize="18sp"/>

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/a_option"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="(A) proportional to pressure of gas"
                        android:textAppearance="?android:textAppearanceMedium" />

                    <RadioButton
                        android:id="@+id/b_option"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="(B) inversely proportional to volume of gas"
                        android:textAppearance="?android:textAppearanceMedium" />

                    <RadioButton
                        android:id="@+id/c_option"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="(C) proportional to absolute temperature of gas"
                        android:textAppearance="?android:textAppearanceMedium" />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout style="@style/questionBox">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/q2"
                    android:textSize="18sp"/>

                <CheckBox
                    android:id="@+id/a_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="(A) It's not a physics term"
                    android:textAppearance="?android:textAppearanceMedium" />

                <CheckBox
                    android:id="@+id/b_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="(B) It has direction"
                    android:textAppearance="?android:textAppearanceMedium" />

                <CheckBox
                    android:id="@+id/c_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="(C) It's a scalar quantity"
                    android:textAppearance="?android:textAppearanceMedium" />

                <CheckBox
                    android:id="@+id/d_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="(D) It has magnitude"
                    android:textAppearance="?android:textAppearanceMedium" />
            </LinearLayout>

            <LinearLayout style="@style/questionBox">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/q3"
                    android:textSize="18sp"/>

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/q3_a_option"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="(A) increase"
                        android:textAppearance="?android:textAppearanceMedium" />

                    <RadioButton
                        android:id="@+id/q3_b_option"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="(B) decrease"
                        android:textAppearance="?android:textAppearanceMedium" />

                    <RadioButton
                        android:id="@+id/q3_c_option"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="(C) become zero"
                        android:textAppearance="?android:textAppearanceMedium" />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout style="@style/questionBox">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/q4"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/q4_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/your_ans"
                    android:inputType="textCapWords" />

            </LinearLayout>

            <LinearLayout style="@style/questionBox">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/q5"
                    android:textSize="18sp"/>

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/q5_option_a_radio_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="(A) True"
                        android:textAppearance="?android:textAppearanceMedium" />

                    <RadioButton
                    android:id="@+id/q5_option_b_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="(B) False"
                    android:textAppearance="?android:textAppearanceMedium" />


                </RadioGroup>
            </LinearLayout>

        </LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="submitAnswers"
        android:layout_margin="16dp"
        android:text="@string/submit" />

</LinearLayout>


    </LinearLayout>
</ScrollView>